--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -8,12 +8,12 @@
 	<body>
 		<h3>Marvel Characters</h3>
 		<br><a href="http://web.engr.oregonstate.edu/~moonha/">Home</a> | 
-		<a href="characters.html">Characters</a> | 
-		<a href="planets.html">Planets</a> | 
-		<a href="powers.html">Powers</a> | 
-		<a href="weapons.html">Weapons</a> | 
-		<a href="alignments.html">Alignments</a> | 
-		<a href="realms.html">Realms</a><br><br>
+		<a href="/characters">Characters</a> | 
+		<a href="/planets">Planets</a> | 
+		<a href="/powers">Powers</a> | 
+		<a href="/weapons">Weapons</a> | 
+		<a href="/alignments">Alignments</a> | 
+		<a href="/realms">Realms</a><br><br>
 
 		<h7>Filter by:</h7>
 		<form>
