Fixed Home button

--- a/views/planets.handlebars
+++ b/views/planets.handlebars
@@ -8,7 +8,7 @@
 	<body>
 		<h3>Marvel Planets</h3>
 
-		<br><a href="http://web.engr.oregonstate.edu/~moonha/">Home</a> | 
+		<br><a href="/">Home</a> | 
 		<a href="/characters">Characters</a> | 
 		<a href="/planets">Planets</a> | 
 		<a href="/powers">Powers</a> | 
