--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -7,7 +7,7 @@
 
 	<body>
 		<h3>Marvel Characters</h3>
-		<br><a href="http://web.engr.oregonstate.edu/~moonha/">Home</a> | 
+		<br><a href="/">Home</a> | 
 		<a href="/characters">Characters</a> | 
 		<a href="/planets">Planets</a> | 
 		<a href="/powers">Powers</a> | 
