--- a/views/update-character.handlebars
+++ b/views/update-character.handlebars
@@ -10,6 +10,6 @@
     Alignment: <input type="radio" name="alignment" value="good">Good
     <input type="radio" name="alignment" value="good">Evil<br>
 </form>
-<button onclick="updatePerson({{character.id}})">Update</button>
+<button onclick="updateChar({{character.id}})">Update</button>
 <script defer>selectPlanet({{character.homeplanet}});</script>
 </html>
