Character, Planet, and Realm pages are displaying properly now

--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -7,7 +7,7 @@
 
 	<body>
 
-		<h3>Add new people:</h3>
+		<h3>Add new character:</h3>
 		<form id="addcharacter" action="/characters" method="post">
 		    Name: <input type="text" name="name"><br>
 		    Home planet: <select name="homeplanet">
@@ -19,11 +19,11 @@
 		    <input type="radio" name="alignment" value="2">Evil<br>
 		    <input type="submit" value="Submit">
 		 </form>
-		<br/>
 
 
 		<!-- vv WORK IN PROGRESS vv -->
 
+		<h3>Search and filter:</h3>
 		<form id='filter_characters' action='' method=''>
 		<!--- this form does not submit directly, the button handles all the interaction with backend -->
 		    <label> Filter by home planet: </label>
