--- a/views/realms.handlebars
+++ b/views/realms.handlebars
@@ -6,37 +6,31 @@
 	</head>
 
 	<body>
-		<h3>Marvel Realms</h3>
 
-		<br><a href="/">Home</a> | 
-		<a href="/characters">Characters</a> | 
-		<a href="/planets">Planets</a> | 
-		<a href="/powers">Powers</a> | 
-		<a href="/weapons">Weapons</a> | 
-		<a href="/alignments">Alignments</a> | 
-		<a href="/realms">Realms</a><br><br>
+		<h3>Add new realm:</h3>
+		<form>
+			Name: <input type="text" name="name"><br>
+			<input type="submit" value="Submit">
+		</form><br />
 
-
+		<h2>Current realm list:</h2>
 		<table>
 			<thead>
 				<th>Name</th>
+				<th>Number of planets</th>
 			</thead>
 			<tbody>
 				{{#each realm}}
 				<tr>
 					<td>{{name}}</td>
-					<td><button onclick="deletePerson({{id}})">Delete</button></td>
-					<td><a href="/realm/{{id}}">Update</a></td>
+					<td>{{planet_count}}</td>
+					<td><button onclick="deleteRealm({{id}})">Delete</button></td>
+					<td><a href="/realms/{{id}}">Update</a></td>
 				</tr>
 				{{/each}}
 			</tbody>
 		</table>
-
-
-		<h7>Add New Realm</h7>
-		<form>
-			Name:<input type="text" name="name"><br>
-			<input type="submit" value="Submit">
 		</form>
+		
 	</body>
 </html>
