--- a/views/planets.handlebars
+++ b/views/planets.handlebars
@@ -6,18 +6,19 @@
 	</head>
 
 	<body>
-		<h3>Marvel Planets</h3>
 
-		<br><a href="/">Home</a> | 
-		<a href="/characters">Characters</a> | 
-		<a href="/planets">Planets</a> | 
-		<a href="/powers">Powers</a> | 
-		<a href="/weapons">Weapons</a> | 
-		<a href="/alignments">Alignments</a> | 
-		<a href="/realms">Realms</a><br><br>
+		<h3>Add new planet:</h3>
+		<form>
+			Name: <input type="text" name="name"><br>
+		    Realm: <select name="realm">
+		        {{#each realm}}
+		        <option value="{{id}}">{{name}}</option>
+		        {{/each}}
+		    </select><br>
+			<input type="submit" value="Submit">
+		</form><br />
 
-
-
+		<h2>Current planet list:</h2>
 		<table>
 			<thead>
 				<th>Name</th>
@@ -28,19 +29,13 @@
 				<tr>
 					<td>{{name}}</td>
 					<td>{{realm}}</td>
-					<td><button onclick="deletePerson({{id}})">Delete</button></td>
-					<td><a href="/planet/{{id}}">Update</a></td>
+					<td><button onclick="deletePlanet({{id}})">Delete</button></td>
+					<td><a href="/planets/{{id}}">Update</a></td>
 				</tr>
 				{{/each}}
 			</tbody>
 		</table>
 
 
-		<h7>Add New Planet</h7>
-		<form>
-			Name:<input type="text" name="name"><br>
-			Realm:<input type="text" name="realm"><br>
-			<input type="submit" value="Submit">
-		</form>
 	</body>
 </html>
