Starting work on the Powers page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 
 	<br><a href="/">Home</a> | 
 	<a href="characters">Characters</a> | 
-	<a href="characters_powers">Powers</a> | 
+	<a href="powers">Powers</a> | 
 	<a href="weapons">Weapons</a> | 
 	<a href="planets">Planets</a> | 
 	<a href="realms">Realms</a><br><br>
