--- a/views/powers.handlebars
+++ b/views/powers.handlebars
@@ -6,39 +6,75 @@
 	</head>
 
 	<body>
-		<h3>Marvel Powers</h3>
 
-		<br><a href="/">Home</a> | 
-		<a href="/characters">Characters</a> | 
-		<a href="/planets">Planets</a> | 
-		<a href="/powers">Powers</a> | 
-		<a href="/weapons">Weapons</a> | 
-		<a href="/alignments">Alignments</a> | 
-		<a href="/realms">Realms</a><br><br>
+		<h3>Add new power:</h3>
+		<form>
+			Name: <input type="text" name="name"><br>
+		    Description: <input type="text" name="description"><br>
+			<input type="submit" value="Submit">
+		</form><br />
 
+		<h3>Edit a power on a character:</h3>
+		<form>
+			Power: <select name="power">
+		        {{#each power}}
+		        <option value="{{id}}">{{name}}</option>
+		        {{/each}}
+		    </select><br>
+			Character: <select name="character">
+		        {{#each character}}
+		        <option value="{{id}}">{{name}}</option>
+		        {{/each}}
+		    </select><br>
+			<input type="submit" value="Add">
+			<input type="submit" value="Remove">
+		</form><br />
+
+		<!-- SEARCH & FILTER OPTIONS IN PROGRESS -->
+
+		<h3>Search and filter:</h3>
+		<form id='filter_powers' action='' method=''>
+		<!--- this form does not submit directly, the button handles all the interaction with backend -->
+		    <label> Filter by power: </label>
+		    <select id='power_filter' name="power">
+		        {{#each power}}
+		        <option value="{{id}}">{{name}}</option>
+		        {{/each}}
+		    </select><br>
+		    <input type="button" value="Filter" onclick="filterByPower()"><br><br>
+		</form>
+
+		<form id='filter_character' action='' method=''>
+		<!--- this form does not submit directly, the button handles all the interaction with backend -->
+		    <label> Filter by character: </label>
+		    <select id='character_filter' name="character">
+		        {{#each character}}
+		        <option value="{{id}}">{{name}}</option>
+		        {{/each}}
+		    </select><br>
+		    <input type="button" value="Filter" onclick="filterPowerByChar()"><br><br>
+		</form>
+
+
+		<h2>Current powers list:</h2>
 		<table>
 			<thead>
 				<th>Name</th>
 				<th>Description</th>
+				<th>Used by # Characters</th>
 			</thead>
 			<tbody>
 				{{#each power}}
 				<tr>
 					<td>{{name}}</td>
 					<td>{{description}}</td>
-					<td><button onclick="deletePerson({{id}})">Delete</button></td>
-					<td><a href="/power/{{id}}">Update</a></td>
+					<td>{{numChars}}</td>
+					<td><button onclick="deletePlanet({{id}})">Delete</button></td>
+					<td><a href="/planets/{{id}}">Update</a></td>
 				</tr>
 				{{/each}}
 			</tbody>
 		</table>
 
-
-		<h7>Add New Power</h7>
-		<form>
-			Name:<input type="text" name="name"><br>
-			Description:<input type="text" name="description"><br>
-			<input type="submit" value="Submit">
-		</form>
 	</body>
 </html>
