--- a/views/weapons.handlebars
+++ b/views/weapons.handlebars
@@ -8,7 +8,7 @@
 	<body>
 
 		<h3>Add new weapon:</h3>
-		<form>
+		<form id="addweapon" action="/weapons" method="post">
 			Name: <input type="text" name="name"><br>
 			Description: <input type="text" name="description"><br>
 		    Wielder: <select name="wielder">
