--- a/views/powers.handlebars
+++ b/views/powers.handlebars
@@ -8,7 +8,7 @@
 	<body>
 
 		<h3>Add new power:</h3>
-		<form>
+		<form id="addpower" action="/powers" method="post">
 			Name: <input type="text" name="name"><br>
 		    Description: <input type="text" name="description"><br>
 			<input type="submit" value="Submit">
