--- a/views/realms.handlebars
+++ b/views/realms.handlebars
@@ -8,7 +8,7 @@
 	<body>
 
 		<h3>Add new realm:</h3>
-		<form>
+		<form id="addrealm" action="/realms" method="post">
 			Name: <input type="text" name="name"><br>
 			<input type="submit" value="Submit">
 		</form><br />
