--- a/views/weapons.handlebars
+++ b/views/weapons.handlebars
@@ -12,6 +12,7 @@
 			Name: <input type="text" name="name"><br>
 			Description: <input type="text" name="description"><br>
 		    Wielder: <select name="wielder">
+		    	<option value="none">None</option>
 		        {{#each character}}
 		        <option value="{{id}}">{{name}}</option>
 		        {{/each}}
