Getting started on Update function

--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -17,6 +17,12 @@
 		    </select><br>
 		    Alignment: <input type="radio" name="alignment" value="1">Good
 		    <input type="radio" name="alignment" value="2">Evil<br>
+		    Add a power: <select name="power">
+		        <option value="none">None</option>
+		        {{#each power}}
+		        <option value="{{id}}">{{name}}</option>
+		        {{/each}}
+		    </select><br>
 		    <input type="submit" value="Submit">
 		 </form>
 
@@ -63,7 +69,7 @@
 					<td>{{planet}}</td>
 					<td>{{alignment}}</td>
 					<td><button onclick="deleteChar({{id}})">Delete</button></td>
-					<td><a href="/character/{{id}}">Update</a></td>
+					<td><a href="/characters/{{id}}">Update</a></td>
 				</tr>
 				{{/each}}
 			</tbody>
