--- a/views/update-character.handlebars
+++ b/views/update-character.handlebars
@@ -1,7 +1,7 @@
 <html>
-<h1>Update {{character.name}}:</h1>
+<h1>Update {{selectChar.name}}:</h1>
 <form id="update-character" action="/characters" method="post">
-    Name: <input type="text" name="name" value="{{character.name}}"><br>
+    Name: <input type="text" name="name" value="{{selectChar.name}}"><br>
     Homeworld: <select name="homeplanet" id="planet-selector"> 
         {{#each planets}}
         <option value="{{id}}">{{name}}</option>
@@ -10,6 +10,6 @@
     Alignment: <input type="radio" name="alignment" value="1">Good
     <input type="radio" name="alignment" value="2">Evil<br>
 </form>
-<button onclick="updateChar({{character.id}})">Update</button>
-<script defer>selectPlanet({{character.homeplanet}});</script>
+<button onclick="updateChar({{selectChar.id}})">Update</button>
+<script defer>selectPlanet({{selectChar.homeplanet}});</script>
 </html>
