--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,11 +10,11 @@
 <body>
 
 	<br><a href="/">Home</a> | 
-	<a href="characters">Characters</a> | 
-	<a href="powers">Powers</a> | 
-	<a href="weapons">Weapons</a> | 
-	<a href="planets">Planets</a> | 
-	<a href="realms">Realms</a><br><br>
+	<a href="../characters">Characters</a> | 
+	<a href="../powers">Powers</a> | 
+	<a href="../weapons">Weapons</a> | 
+	<a href="../planets">Planets</a> | 
+	<a href="../realms">Realms</a><br><br>
 
 	{{{body}}}
 </body>
