Working on Update functions

--- a/views/weapons.handlebars
+++ b/views/weapons.handlebars
@@ -49,8 +49,8 @@
 					<td>{{name}}</td>
 					<td>{{description}}</td>
 					<td>{{wielder}}</td>
-					<td><button onclick="deletePlanet({{id}})">Delete</button></td>
-					<td><a href="/planets/{{id}}">Update</a></td>
+					<td><button onclick="deleteWeapon({{id}})">Delete</button></td>
+					<td><a href="/weapons/{{id}}">Update</a></td>
 				</tr>
 				{{/each}}
 			</tbody>
