--- a/views/update-planet.handlebars
+++ b/views/update-planet.handlebars
@@ -1,15 +1,13 @@
 <html>
-<h1>Update {{selectChar.name}}:</h1>
-<form id="update-character" action="/characters" method="post">
-    Name: <input type="text" name="name" value="{{selectChar.name}}"><br>
-    Homeworld: <select name="homeplanet" id="planet-selector"> 
-        {{#each planets}}
+<h1>Update {{selectPlanet.name}}:</h1>
+<form id="update-planet" action="/planets" method="post">
+    Name: <input type="text" name="name" value="{{selectPlanet.name}}"><br>
+    Realm: <select name="realm" id="realm-selector"> 
+        {{#each realm}}
         <option value="{{id}}">{{name}}</option>
         {{/each}}
     </select><br>
-    Alignment: <input type="radio" name="alignment" value="1">Good
-    <input type="radio" name="alignment" value="2">Evil<br>
 </form>
-<button onclick="updateChar({{selectChar.id}})">Update</button>
-<script defer>selectPlanet({{selectChar.homeplanet}});</script>
+<button onclick="updatePlanet({{selectPlanet.id}})">Update</button>
+<script defer>selectRealm({{selectPlanet.homeplanet}});</script>
 </html>
