--- a/views/update-weapon.handlebars
+++ b/views/update-weapon.handlebars
@@ -1,15 +1,15 @@
 <html>
-<h1>Update {{selectChar.name}}:</h1>
-<form id="update-character" action="/characters" method="post">
-    Name: <input type="text" name="name" value="{{selectChar.name}}"><br>
-    Homeworld: <select name="homeplanet" id="planet-selector"> 
-        {{#each planets}}
+<h1>Update {{selectWeapon.name}}:</h1>
+<form id="update-weapon" action="/weapons" method="post">
+    Name: <input type="text" name="name" value="{{selectWeapon.name}}"><br>
+    Description: <input type="text" name="description" value="{{selectWeapon.description}}"><br>
+    Wielder: <select name="wielder" id="character-selector"> 
+		<option value="none">None</option>
+        {{#each character}}
         <option value="{{id}}">{{name}}</option>
         {{/each}}
     </select><br>
-    Alignment: <input type="radio" name="alignment" value="1">Good
-    <input type="radio" name="alignment" value="2">Evil<br>
 </form>
-<button onclick="updateChar({{selectChar.id}})">Update</button>
-<script defer>selectPlanet({{selectChar.homeplanet}});</script>
+<button onclick="updateWeapon({{selectWeapon.id}})">Update</button>
+<script defer>selectCharacter({{selectWeapon.wielder}});</script>
 </html>
