--- a/views/update-power.handlebars
+++ b/views/update-power.handlebars
@@ -1,15 +1,8 @@
 <html>
-<h1>Update {{selectChar.name}}:</h1>
-<form id="update-character" action="/characters" method="post">
-    Name: <input type="text" name="name" value="{{selectChar.name}}"><br>
-    Homeworld: <select name="homeplanet" id="planet-selector"> 
-        {{#each planets}}
-        <option value="{{id}}">{{name}}</option>
-        {{/each}}
-    </select><br>
-    Alignment: <input type="radio" name="alignment" value="1">Good
-    <input type="radio" name="alignment" value="2">Evil<br>
+<h1>Update {{selectPower.name}}:</h1>
+<form id="update-power" action="/powers" method="post">
+    Name: <input type="text" name="name" value="{{selectPower.name}}"><br>
+    Description: <input type="text" name="description" value="{{selectPower.description}}"><br>
 </form>
-<button onclick="updateChar({{selectChar.id}})">Update</button>
-<script defer>selectPlanet({{selectChar.homeplanet}});</script>
+<button onclick="updatePower({{selectPower.id}})">Update</button>
 </html>
