Filter function for planets

--- a/views/planets.handlebars
+++ b/views/planets.handlebars
@@ -31,7 +31,7 @@
 		        <option value="{{id}}">{{name}}</option>
 		        {{/each}}
 		    </select><br>
-		    <input type="button" value="Filter" onclick="filterPlanetsByRealm()"><br><br>
+		    <input type="button" value="Filter" onclick="filterPlanetByRealm()"><br><br>
 		</form>
 
 		<form id='search_planet' action='' method=''>
