Filter function for weapons

--- a/views/weapons.handlebars
+++ b/views/weapons.handlebars
@@ -32,7 +32,7 @@
 		        <option value="{{id}}">{{name}}</option>
 		        {{/each}}
 		    </select><br>
-		    <input type="button" value="Filter" onclick="filterWeaponsByCharacter()"><br><br>
+		    <input type="button" value="Filter" onclick="filterWeaponsByChar()"><br><br>
 		</form>
 
 
