--- a/views/powers.handlebars
+++ b/views/powers.handlebars
@@ -3,19 +3,87 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Marvel Powers</title>
+	<style type="text/css">
+		body {
+		  background-color: #401515;
+		  color: white;
+		  font-family: arial;
+		  background-image: url("https://i.imgur.com/V3mfvJy.png");
+		  background-repeat: repeat;
+		}
+		table, th, td {
+		  border: 1px solid #af0000;
+		  border-radius: 5px;
+		  padding: 2px;
+		  vertical-align: center;
+		}
+		table {
+		  width: 50%;
+		  margin: auto;
+		  border-collapse: separate;
+		  border-spacing: 2;
+		  border: 2px solid #d6b200 !important;
+		}
+		th {
+		  text-align: center;
+		  border: 2px solid #d6b200 !important;
+		}
+		td {
+		  text-align: left;
+		}
+		tr:nth-child(even) {
+		  background-color: rgba(255, 0, 0, 0.1);
+		}
+		tr:nth-child(odd) {
+		  background-color: rgba(0, 0, 0, 0.2);
+		}
+		input, select, button {
+		  border-radius: 5px;
+		  padding: 3px;
+		  margin: 5px;
+		  color: white;
+		  background-color: #000000;
+		  border: 2px solid #af0000;
+		}
+		.area {
+		  border-radius: 5px;
+		  padding: 2px;
+		  margin: 5px;
+		  color: white;
+		  background-color: rgba(0, 0, 0, 0.1);
+		  border: 2px solid #af0000;
+		}
+		a:link {
+		  color: white;
+		  text-decoration: none;
+		  font-weight: bold;
+		}
+		a:visited {
+		  color: white;
+		  text-decoration: none;
+		}
+		a:hover {
+		  color: red;
+		  text-decoration: none;
+		}
+		a:active {
+		  color: yellow;
+		  text-decoration: none;
+		}
+	</style>
 	</head>
 
 	<body>
 
 		<h3>Add new power:</h3>
-		<form id="addpower" action="/powers" method="post">
+		<form id="addpower" action="/powers" method="post" class="area">
 			Name: <input type="text" name="name"><br>
 		    Description: <input type="text" name="description"><br>
 			<input type="submit" value="Submit">
 		</form><br />
 
 		<h3>Edit a power on a character:</h3>
-		<form>
+		<form class="area">
 			Power: <select name="power">
 		        {{#each power}}
 		        <option value="{{id}}">{{name}}</option>
@@ -34,7 +102,7 @@
 
 		<h3>Search and filter:</h3>
 
-		<form id='filter_character' action='' method=''>
+		<form id='filter_character' action='' method='' class="area">
 		<!--- this form does not submit directly, the button handles all the interaction with backend -->
 		    <label> Filter by character: </label>
 		    <select id='character_filter' name="character">
