Fixing some bugs
Needed id included in filter code and menu wasn't working after filtering.

--- a/views/update-character.handlebars
+++ b/views/update-character.handlebars
@@ -46,13 +46,12 @@
 <form id="update-character" action="/characters" method="post">
     Name: <input type="text" name="name" value="{{selectChar.name}}"><br>
     Homeworld: <select name="homeplanet" id="planet-selector"> 
-		<option value="{{selectChar.homeplanet}}">Keep as is</option>
 		<option value="none">None</option>
         {{#each planets}}
         <option value="{{id}}">{{name}}</option>
         {{/each}}
     </select><br>
-    Alignment: <input type="radio" name="alignment" value="1">Good
+    Alignment: <input type="radio" name="alignment" value="1" checked="checked" required>Good
     <input type="radio" name="alignment" value="2">Evil<br>
 </form>
 <button onclick="updateChar({{selectChar.id}})">Update</button>
