--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,11 @@
 <body>
 	<img src="https://i.imgur.com/AlYF6uj.png" width=200px>
 	<br><a href="/">Home</a> | 
-	<a href="../characters">Characters</a> | 
-	<a href="../powers">Powers</a> | 
-	<a href="../weapons">Weapons</a> | 
-	<a href="../planets">Planets</a> | 
-	<a href="../realms">Realms</a><br><br>
+	<a href="../../characters">Characters</a> | 
+	<a href="../../powers">Powers</a> | 
+	<a href="../../weapons">Weapons</a> | 
+	<a href="../../planets">Planets</a> | 
+	<a href="../../realms">Realms</a><br><br>
 	{{{body}}}
 </body>
 </html>
