Fixed Character updating

--- a/views/realms.handlebars
+++ b/views/realms.handlebars
@@ -81,6 +81,17 @@
 			<input type="submit" value="Submit">
 		</form><br />
 
+		<!-- SEARCH & FILTER OPTIONS IN PROGRESS -->
+
+		<h3>Search and filter:</h3>
+
+		<form id='search_realm' action='' method='' class="area">
+		<!--- this form does not submit directly, the button handles all the interaction with backend -->
+		    <label> Search realms for name starting with:</label>
+		    <input id='name_search_string' type='text' name='name_search_string' value=''>
+		    <input type="button" value="Search" onclick="searchRealmsByName()">
+		</form>
+
 		<h2>Current realm list:</h2>
 		<table>
 			<thead>
