--- a/views/update-character.handlebars
+++ b/views/update-character.handlebars
@@ -55,5 +55,5 @@
     <input type="radio" name="alignment" value="2">Evil<br>
 </form>
 <button onclick="updateChar({{selectChar.id}})">Update</button>
-<script defer>selectPlanet({{selectChar.homeplanet}});</script>
+<script defer>selectPlanet({{selectChar.planet}});</script>
 </html>
