--- a/views/characters.handlebars
+++ b/views/characters.handlebars
@@ -70,6 +70,9 @@
 		  color: yellow;
 		  text-decoration: none;
 		}
+		.button {
+		  width: 50px !important;
+		}
 	</style>
 	</head>
 
@@ -123,10 +126,12 @@
 					<td>{{name}}</td>
 					<td>{{planet}}</td>
 					<td>{{alignment}}</td>
-					<td><button onclick="deleteChar({{id}})">Delete</button></td>
-					<td><a href="/characters/{{id}}">Update</a></td>
+					<td class="button"><button onclick="deleteChar({{id}})">Delete</button></td>
+					<td class="button"><input type="button" onclick="location.href='/characters/{{id}}';" value="Update" /></td>
 				</tr>
-				{{/each}}
+		        {{else}}
+		        <b> No characters matching specific search. </b>
+		        {{/each}} 
 			</tbody>
 		</table>
 	</body>
