--- a/views/weapons.handlebars
+++ b/views/weapons.handlebars
@@ -70,6 +70,9 @@
 		  color: yellow;
 		  text-decoration: none;
 		}
+		.button {
+		  width: 50px !important;
+		}
 	</style>
 	</head>
 
@@ -117,10 +120,12 @@
 					<td>{{name}}</td>
 					<td>{{description}}</td>
 					<td>{{wielder}}</td>
-					<td><button onclick="deleteWeapon({{id}})">Delete</button></td>
-					<td><a href="/weapons/{{id}}">Update</a></td>
+					<td class="button"><button onclick="deleteWeapon({{id}})">Delete</button></td>
+					<td class="button"><input type="button" onclick="location.href='/weapons/{{id}}';" value="Update" /></td>
 				</tr>
-				{{/each}}
+		        {{else}}
+		        <b> No weapons matching specific search. </b>
+		        {{/each}} 
 			</tbody>
 		</table>
 
