--- a/views/realms.handlebars
+++ b/views/realms.handlebars
@@ -82,7 +82,7 @@
 
 		<h3>Add new realm:</h3>
 		<form id="addrealm" action="/realms" method="post" class="area">
-			Name: <input type="text" name="name"><br>
+			Name: <input type="text" name="name" required><br>
 			<input type="submit" value="Submit">
 		</form><br />
 
