--- a/views/weapons.handlebars
+++ b/views/weapons.handlebars
@@ -80,7 +80,7 @@
 
 		<h3>Add new weapon:</h3>
 		<form id="addweapon" action="/weapons" method="post" class="area">
-			Name: <input type="text" name="name"><br>
+			Name: <input type="text" name="name" required><br>
 			Description: <input type="text" name="description"><br>
 		    Wielder: <select name="wielder">
 		    	<option value="none">None</option>
