--- a/views/update-power.handlebars
+++ b/views/update-power.handlebars
@@ -44,7 +44,7 @@
 
 <h1>Update {{selectPower.name}}:</h1>
 <form id="update-power" action="/powers" method="post">
-    Name: <input type="text" name="name" value="{{selectPower.name}}"><br>
+    Name: <input type="text" name="name" value="{{selectPower.name}}" required><br>
     Description: <input type="text" name="description" value="{{selectPower.description}}"><br>
 </form>
 <button onclick="updatePower({{selectPower.id}})">Update</button>
