--- a/views/update-realm.handlebars
+++ b/views/update-realm.handlebars
@@ -44,7 +44,7 @@
 
 <h1>Update {{selectRealm.name}}:</h1>
 <form id="update-realm" action="/realms" method="post">
-    Name: <input type="text" name="name" value="{{selectRealm.name}}"><br>
+    Name: <input type="text" name="name" value="{{selectRealm.name}}" required><br>
 </form>
 <button onclick="updateRealm({{selectRealm.id}})">Update</button>
 </html>
