--- a/views/powers.handlebars
+++ b/views/powers.handlebars
@@ -120,6 +120,13 @@
 		    <input type="button" value="Filter" onclick="filterPowerByChar()"><br><br>
 		</form>
 
+		<form id='search_powers' action='' method='' class="area">
+		<!--- this form does not submit directly, the button handles all the interaction with backend -->
+		    <label> Search powers for name starting with:</label>
+		    <input id='name_search_string' type='text' name='name_search_string' value=''>
+		    <input type="button" value="Search" onclick="searchPowersByName()">
+		</form>
+
 
 		<h2>Current powers list:</h2>
 		<table>
