Search functionality for realm.
Still not working

--- a/views/realms.handlebars
+++ b/views/realms.handlebars
@@ -88,12 +88,12 @@
 
 		<!-- SEARCH & FILTER OPTIONS IN PROGRESS -->
 
-		<h3>Search and filter:</h3>
+		<h3>Search:</h3>
 
 		<form id='search_realm' action='' method='' class="area">
 		<!--- this form does not submit directly, the button handles all the interaction with backend -->
 		    <label> Search realms for name starting with:</label>
-		    <input id='name_search_string' type='text' name='name_search_string' value=''>
+		    <input id='search_string' type='text' name='search_string' value=''>
 		    <input type="button" value="Search" onclick="searchRealmsByName()">
 		</form>
 
